@@ -32,6 +32,7 @@ Verilator 5.029 devel
 * Improve Verilation thread pool (#5161). [Bartłomiej Chmiel, Antmicro Ltd.]
 * Improve performance of V3VariableOrder with parallelism (#5406). [Bartłomiej Chmiel, Antmicro Ltd.]
 * Improve parser error handling. [Arkadiusz Kozdra, Antmicro Ltd.]
+* Fix suppression of WIDTH* warnings when immediately under a size cast (#3417).
 * Fix `$fatal` to not be affected by `+verilator+error+limit` (#5135). [Gökçe Aydos]
 * Fix display with multiple string formats (#5311). [Luiza de Melo]
 * Fix performance of V3Trace when many activity blocks (#5372). [Deniz Güzel]
